# schemas-package-template

./: README.md  cookiecutter.json
.github/workflows/: ci.yml
{{ cookiecutter.package_name }}/: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
{{ cookiecutter.package_name }}/.github/workflows/: ci.yml
{{ cookiecutter.package_name }}/resources/manifests/: {{ cookiecutter.uri_project }}-1.0.0.yaml
{{ cookiecutter.package_name }}/resources/{{ cookiecutter.uri_authority }}/manifests/: example-1.0.0.yaml
{{ cookiecutter.package_name }}/resources/{{ cookiecutter.uri_authority }}/schemas/: example-1.0.0.yaml
{{ cookiecutter.package_name }}/src/{{ cookiecutter.module_name }}/: integration.py
{{ cookiecutter.package_name }}/tests/: test_integration.py  test_manifests.py
