[metadata]
name = {{ cookiecutter.module_name }}
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
license = TBD
license_file = LICENSE
description = {{ cookiecutter.short_description }}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{ cookiecutter.project_url }}

[options]
python_requires = >=3.6
zip_safe = true
install_requires =
    asdf>=2.8.0

[options.extras_require]
test =
    pytest

[options.entry_points]
asdf.resource_mappings =
    {{ cookiecutter.module_name }} = {{ cookiecutter.module_name }}.integration:get_resource_mappings

[tool:pytest]
asdf_schema_root = resources/{{ cookiecutter.uri_authority }}/schemas
asdf_schema_tests_enabled = true
asdf_schema_ignore_unrecognized_tag = true
testpaths =
    tests
    resources

[flake8]
ignore = E501, E203, W503
exclude = .git, __pycache__, build, dist, eggs, *.egg, .tox
